# firmware

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig
include/: homeAssistant.h  i2c_master.h  ina3221.h  interfaceUtils.h  mcp7940n.h  nvsManager.h  nvs_manager.h  output.h  sbcPduManagement.h  spiffs.h
include/network/: ethernet.h  hostname.h  http.h  mdns.h  mqtt.h  multicast_dns.h  sntp.h  wifi.h
include/restApi/: authController.h  basicAuthenticator.h  cors.h  hostnameController.h  mqttController.h  ntpController.h  outputsController.h  systemController.h  wifiController.h
include/utils/: base64.h  bcd.h  interfaceUtils.h  restApiUtils.h
main/: CMakeLists.txt  homeAssistant.cpp  i2c_master.cpp  ina3221.cpp  interfaceUtils.cpp  main.cpp  mcp7940n.cpp  nvsManager.cpp  nvs_manager.cpp  output.cpp  sbcPduManagement.cpp  spiffs.cpp
main/network/: ethernet.cpp  hostname.cpp  http.cpp  mdns.cpp  mqtt.cpp  multicast_dns.cpp  sntp.cpp  wifi.cpp
main/restApi/: authController.cpp  basicAuthenticator.cpp  cors.cpp  hostnameController.cpp  mqttController.cpp  ntpController.cpp  outputsController.cpp  systemController.cpp  wifiController.cpp
main/utils/: interfaceUtils.cpp
tests/: sbc-pdu.postman_collection.json
webapp/: .env  README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
webapp/src/: App.vue  env.d.ts  vite-env.d.ts
webapp/src/components/: Card.vue  PasswordField.vue
webapp/src/helpers/: formValidator.ts  localeHelper.ts  modalWindowHelper.ts
(+44 files in other folders)
